--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -9,8 +9,8 @@
     
 } */
 .container{
-    max-width: 100%;
-    margin: auto;
+    max-width: 60%;
+    margin: 40px;
     display: grid;
     grid-template-columns: repeat(2,1fr);
     grid-gap: 1px;
@@ -18,7 +18,7 @@
 }
 .left{
     
-    margin-left: 40px;
+    margin-left: 2px;
     /* height: 83%; */
     display: flex;
     flex-direction: row;
