--- a/src/Components/Dynamiccard.css
+++ b/src/Components/Dynamiccard.css
@@ -13,29 +13,36 @@
 
 }
 .project-card{
-    background-color: #101919;
     padding: 1.2rem 1rem;
 }
 .project-card img{
     width: 100%;
-    
 }
 .project-title{
-    color:white;
-    padding: 1em 0;
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 30px;
+letter-spacing: 0.03em;
+ color: #63AD01;
+ padding: 1em 0;
 }
 .pro-detail p{
-    padding-bottom: 1rem;
-    font-size: 1.3rem;
-    text-align: justify;
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 17px;
+line-height: 26px;
+/* or 166% */
+letter-spacing: 0.03em;
+color: #777777;
 }
 .pro-btns{
     display: flex;
     justify-content: space-between;
     padding: 0.5rem 1rem;
 }
-
-
 .pro-btns .btn {
     padding: 0.5rem 1em;
 
