--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -1,20 +1,57 @@
 
-/* .foot{
-    width: 100px;
-    position: relative;
-    transform: translate(0 50%);
-     top : 0rem;
-     left : 0;
-      padding: 1rem;
+.footer{
+    /* Line 6 */
+/* Rectangle 1668 */
+background: linear-gradient(180deg, #63AD01 3.94%, rgba(255, 255, 255, 0) 102.51%);
+display: flex;
+justify-content: end;
+flex-direction: column;
+padding-left: 40px;
+display: flex;
+box-sizing: border-box;
+justify-content: center;
+padding: 20px;
+}
+.footerstyle{
+    display: flex;
+    gap: 150px;
+}
+.footer--container{
+    /* Line 6 */
+/* toppng 3 */
+
+
+background: #F1F1F1;
+
+}
+.company{
+    line-height: 50px;
+    gap: 90px;
+    box-sizing: border-box;
+    flex-direction: colomn;
+    flex-basis: 100%;
+    -webkit-box-flex: 0;
+    flex-grow: 0;
+    max-width: 100%;
+    display: flex;
+    /* -webkit-box-pack: start; */
+    justify-content: flex-start;
+    -webkit-box-align: center;
+    align-items: center;
+    text-align: left;
+}
+.follow{
+    display: flex;
+    flex-direction: column;
     
-} */
-.container{
-    max-width: 60%;
-    margin: 40px;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-gap: 1px;
-    
+}
+.iconstyle{
+    /* facebook-(2) 1 */
+
+display: flex;
+gap: 20px;
+
+
 }
 .left{
     
@@ -37,19 +74,30 @@
 .right{
     margin-left: 20px;
     font-size: 20px;
-justify-content: center;
+    justify-content: center;
     height: 117%;
     width: 175%;
     display: flex;
     flex-direction: column;
     padding: 1rem;
     flex-wrap: row;
-
 }
 .social{
     margin-top: 3rem;
 }
-
+.picstyle1{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 28px;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+    align-items: baseline;
+    }
 .tk{
     margin-left: 2px;
     font-size: larger;
