--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,26 +1,17 @@
 
 .header{
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1em;
+  height: 144px;
+  font-size: large;
+  flex-wrap: wrap;
+  max-width: 120%;
+ box-sizing: border-box;
 }
-.logo{
-  /* woundmend 1 */
 
-position: absolute;
-width: 318px;
-height: 37px;
-left: 122px;
-top: 48px;
-}
-button {
-position: absolute;
-width: 110px;
-height: 38px;
-left: 1208px;
-top: 47px;
-background: #63AD01;
-border-radius: 6px;
-}
+
 .signup{
   position: absolute;
 width: 110px;
@@ -38,22 +29,11 @@ button.logo:hover {
   display: flex;
   align-items: center;
 }
-.header{
-  /* background-color: #FBFBFB;  */
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1em;
-    position: sticky;
-    width: 115%;
-    height: 144px;
-    font-size: large;
 
-}
 .menu {
-  width: 100px;
+    max-width: 100%;
     display: flex;
-  
+     margin: 30px;
 }
 .men:hover{
   
