--- a/src/Components/Small.css
+++ b/src/Components/Small.css
@@ -1,200 +1,243 @@
-.text{
-position: absolute;
-width: 466px;
-height: 330px;
-left: 122px;
-top: 184px;
-
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 700;
-font-size: 80px;
-line-height: 85px;
-/* or 106% */
-
-color: #63AD01;
+.main {
+  display: block;
 }
-.h2{
-    /* WoundMend offers instant assessment of acute and chronic wounds. The state-of-the-art mobile application operates on Artificial Intelligence technology and helps you scan all sorts of rashes, wounds or pigments. */
-position: absolute;
-width: 472px;
-height: 194px;
-left: 125px;
-top: 576px;
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 35px;
-/* or 219% */
-letter-spacing: 0.03em;
-color: #777777;
+.mdiv {
+  text-align: center;
+}
+.container1 {
+  max-width: 26%;
+  margin: 40px;
+  display: grid;
+  grid-gap: 1px;
+}
+.text {
+  width: 466px;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 80px;
+  line-height: 85px;
+  color: #63ad01;
+}
+.line {
+  height: 10px;
+  background: #63ad01;
+  border-radius: 20px;
+}
+.line1 {
+  width: 264px;
+  height: 10px;
+  background: #ffd600;
+  border-radius: 20px;
+  left: 504px;
+}
+.h2 {
+  margin: 24px;
+  width: 472px;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 35px;
+  letter-spacing: 0.03em;
+  color: #777777;
+}
+.container2 {
+  padding: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.Elipse {
+  width: 320px;
+  height: 320px;
+  left: 976px;
+  top: 1286px;
+
+  background: #f1f1f1;
+}
+.tx {
+  font-family: "Poppins";
+  font-size: 20px;
+  line-height: 30px;
+  color: #777777;
+}
+.tx2 {
+  /* WoundMend helps you scan and detect all sorts of wounds for possible predictions */
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 30px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #777777;
+}
+.firstphoto {
+  display: flex;
+  padding: 20px;
+  background: rgba(0, 0, 0, 0.6);
+  margin: 5px;
+}
+.firstpic {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 50px;
+  /* or 126% */
+  letter-spacing: 0.03em;
+  color: #ffd600;
+}
+.line3 {
+  display: flex;
+  margin-top: 20px;
+  max-width: 60%;
+  height: 9px;
+  background: linear-gradient(90.07deg, #63ad01 0.06%, #ffd600 157.95%);
+  border-radius: 20px;
+}
+.picstyle {
+  margin-top: 20px;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 28px;
+  letter-spacing: 0.03em;
+  color: #ffffff;
 }
 
-   .btn1{
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    /* identical to box height */
-      margin: 0.4rem;
-      padding: 12px 32px;
-      font-size: 1rem;
-      text-transform: uppercase;
-      background-color: #63ad01;
-      color: black;
-      border: 1px solid white;
-      font-weight: 900;
-      cursor: pointer;
-     }
-     
-     .btn1:hover {
-      background-color: white;
-       opacity: 4rem;
-       color : black
-      }
-      .line{
-        /* Rectangle 7 */
-
-position: absolute;
-width: 264px;
-height: 10px;
-background: #63AD01;
-border-radius: 20px;
-
-      }
-      .line1{
-        /* Rectangle 7 */
-
-position: absolute;
-width: 264px;
-height: 10px;
-background: #ffd600;
-border-radius: 20px;
-left: 124px;
-      }
-      .tx{
-        position: absolute;
-        width: 114px;
-        /* height: 30px; */
-        left: 662px;
-      }
-.tx1{
-    /* WoundMend Service */
-position: absolute;
-width: 446px;
-height: 80px;
-left: 496px;
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 700;
-font-size: 40px;
-line-height: 80px;
-/* identical to box height, or 200% */
-text-align: center;
-letter-spacing: 0.03em;
-text-transform: capitalize;
-color: #63AD01;
+.textss {
+  display: flex;
+  padding: 20px;
 }
-.tx2{
-    /* WoundMend helps you scan and detect all sorts of wounds for possible predictions */
-position: absolute;
-width: 514px;
-height: 60px;
-left: 462px;
-top: 270px;
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 400;
-font-size: 20px;
-line-height: 30px;
-text-align: center;
-letter-spacing: 0.03em;
-color: #777777;
+.icons {
+  display: flex;
+  gap: 10px;
+  margin-top: 20px;
 }
-.tx3{
-/* Step 1 */
-position: absolute;
-width: 133px;
-height: 56px;
-left: 133px;;
-top:400px;
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 700;
-font-size: 40px;
-line-height: 60px;
-text-align: center;
-letter-spacing: 0.03em;
-text-transform: capitalize;
-color: #222222;
+@media (min-width: 600px) {
+  .texts {
+    padding: 25px;
+    flex-basis: 50%;
+    -webkit-box-flex: 0;
+    flex-grow: 0;
+    max-width: 100%;
+    box-sizing: border-box;
+    display: flex;
+    flex-flow: row;
+  }
 }
-.text1{
+@media (min-width: 0px) {
+  .texts1 {
+    padding-left: 16px;
+  }
+}
+.texts2 {
+  color: rgba(0, 0, 0, 0.87);
+  min-width: 275px;
+  border: 0px solid;
+  font-weight: 700;
+  padding: 25px;
+  flex-basis: 50%;
+  -webkit-box-flex: 0;
+  flex-grow: 0;
+  max-width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  flex-flow: column;
+  letter-spacing: 0.03em;
+  text-transform: capitalize;
+}
+.texts3 {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #777777;
+}
+.btn1 {
+  font-family: "Poppins";
+  line-height: 24px;
+  padding: 12px 32px;
+  background-color: #63ad01;
+  border: 4px solid white;
+  font-weight: 900;
+  cursor: pointer;
+}
+.btn1:hover {
+  background-color: white;
+  opacity: 4rem;
+  color: black;
+}
+.tx1 {
+  font-family: "Poppins";
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 80px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #63ad01;
+}
+.text1 {
   /* Download the WoundMend mobile app, available both for Android and ioS platforms. */
-display: flex;
-align-items: flex-start;
-justify-content: space-between;
-flex-direction: row;
-position: absolute;
-width: 100%;
-height: 46px;
-left: 40px;
-top: 470px;
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 23px;
-text-align: center;
-letter-spacing: 0.03em;
-color: #777777;
+
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-direction: row;
+  position: absolute;
+  width: 100%;
+  height: 46px;
+  left: 40px;
+  top: 470px;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #777777;
 }
+.text3 {
+  /* Point your phone camera towards the concerned part of the skin. Our app will investigate your injury through the use of our qualified database and high-tech machine learning along with clinically validated algorithm. */
 
-.text2{
-position: absolute;
-width: 334px;
-height: 46px;
-left: 20px;
+  width: 100%;
+  height: 138px;
+  left: 400px;
+
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 23px;
+  /* or 164% */
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: #777777;
 }
-.text3{
-/* Point your phone camera towards the concerned part of the skin. Our app will investigate your injury through the use of our qualified database and high-tech machine learning along with clinically validated algorithm. */
-position: absolute;
-width: 100%;
-height: 138px;
-left: 400px;
-
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 23px;
-/* or 164% */
-text-align: center;
-letter-spacing: 0.03em;
-
-color: #777777;
-
-
-
-
-}
-.text4{
+.text4 {
   /* Wait for WoundMend to determine the type and nature of your wound for a whole list of predictions in no time. */
 
-position: absolute;
-width: 334px;
-height: 69px;
-left: 900px;
+  position: absolute;
+  width: 334px;
+  height: 69px;
+  left: 900px;
 }
-.tx5{
+.tx5 {
   /* Step 1 */
   position: absolute;
   width: 133px;
   height: 56px;
-  left: 133px;;
-  top:400px;
-  font-family: 'Poppins';
+  left: 133px;
+  top: 400px;
+  font-family: "Poppins";
   font-style: normal;
   font-weight: 700;
   font-size: 40px;
@@ -203,34 +246,112 @@ left: 900px;
   letter-spacing: 0.03em;
   text-transform: capitalize;
   color: #222222;
-  }
-.jk{
-  /* Why WoundMend? */
-
-position: absolute;
-width: 406px;
-height: 80px;
-top:100px;
-left: 852px;
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 700;
-font-size: 40px;
-line-height: 80px;
-/* identical to box height, or 200% */
-text-align: center;
-letter-spacing: 0.03em;
-text-transform: capitalize;
-color: #63AD01;
 }
-.kj{
-position: absolute;
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 23px;
-/* or 164% */
-letter-spacing: 0.03em;
-color: #777777;
+
+.bottom {
+  display: flex;
+  -ms-flex-pack: center;
+  justify-content: center;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 0;
+  font-size: 20px;
+  line-height: 30px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #777777;
+  padding: 30px;
+  flex-direction: column;
+}
+.bottom1 {
+  margin-left: 120px;
+  max-width: 81%;
+  display: flex;
+  justify-content: center;
+  /* 433,000 Australians are estimated to suffer from a chronic wound at any time, costing the healthcare system more than $2.85 billion annually */
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 0;
+  font-size: 20px;
+  line-height: 30px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #777777;
+  padding: 30px;
+}
+.bottom2 {
+  /* 6.5 million */
+  position: absolute;
+  width: 113px;
+  height: 30px;
+  right: 464px;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 30px;
+  /* identical to box height */
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #63ad01;
+}
+.milion {
+  margin: -30px;
+  display: flex;
+  max-width: 54%;
+  margin-left: 19%;
+}
+.green {
+  letter-spacing: 0.03em;
+  text-transform: capitalize;
+  color: #63ad01;
+}
+.bottom3 {
+  /* Affected by chronic wounds */
+
+  position: absolute;
+  width: 212px;
+  height: 23px;
+  right: 314px;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 23px;
+  /* identical to box height, or 164% */
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: capitalize;
+  color: #777777;
+}
+.extra {
+  display: flex;
+  background-color: #63ad01;
+}
+.downloadapp {
+  /* Rectangle 40 */
+  margin-top: 20px;
+  width: 210px;
+  height: 40px;
+  background: linear-gradient(
+    90deg,
+    #63ad01 55.77%,
+    rgba(120, 207, 4, 0) 249.04%
+  );
+  border-radius: 6px;
+}
+.buttonstyle {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #ffffff;
+}
+.Group {
+  position: absolute;
+  width: 534.08px;
+  height: 557.54px;
+  left: 751.34px;
+  top: 250px;
 }
